# economy-sim

./: Cargo.toml
src/: main.rs
src/consumer/: mod.rs
src/factory/: mod.rs
src/factory/template/: mod.rs
src/market/: mod.rs
src/money/: mod.rs
src/recipe/: mod.rs
src/recipes/: mod.rs
src/statistics/: mod.rs
src/statistics/factory_money_statistics/: mod.rs
src/time/: mod.rs
src/ware/: mod.rs
src/warehouse/: mod.rs
src/wares/: mod.rs
src/world/: mod.rs
